--- a/ci-cd-codepipeline.cfn.yml
+++ b/ci-cd-codepipeline.cfn.yml
@@ -40,7 +40,7 @@ Parameters:
 
   GitHubUser:
     Type: String
-    Default: Jingwei
+    Default: johnwaynepk
     Description: GitHub username or organization
     MinLength: 3
     MaxLength: 100
