--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,7 +20,8 @@ phases:
         - $(aws ecr get-login --no-include-email)
         - export KUBECONFIG=$HOME/.kube/config
         - pip install -r requirements.txt
-        - python3 test_main.py
+        - pytest
+        - python test_main.py
         
   build:
     commands:
